re-run tutorials + imprv text

--- a/docs/source/notebooks/mofacellular.ipynb
+++ b/docs/source/notebooks/mofacellular.ipynb
@@ -243,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:02<00:00,  3.01it/s]\n"
+      "100%|██████████| 8/8 [00:02<00:00,  2.84it/s]\n"
      ]
     }
    ],
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -661,14 +661,14 @@
        "4   patient_107  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# obtain factor scores\n",
-    "factor_scores = li.multi.get_factor_scores(mdata, obsm_key='X_mofa', obs_keys=['condition', 'patient'])\n",
+    "factor_scores = li.ut.get_factor_scores(mdata, obsm_key='X_mofa', obs_keys=['condition', 'patient'])\n",
     "factor_scores.head()"
    ]
   },
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -745,10 +745,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8736176068458)>"
+       "<ggplot: (8756782049890)>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -879,13 +879,13 @@
        "14158     B    ISG15 -2.562753 -0.810544 -0.592947 -0.249902  3.323177"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "variable_loadings =  li.multi.get_variable_loadings(mdata, varm_key='LFs', view_separator=':') # get loadings\n",
+    "variable_loadings =  li.ut.get_variable_loadings(mdata, varm_key='LFs', view_separator=':') # get loadings\n",
     "# order features by absolute value for Factor 1\n",
     "variable_loadings = variable_loadings.sort_values(by='Factor1', key=lambda x: abs(x), ascending=False)\n",
     "variable_loadings.head()"
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -911,10 +911,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8736176091293)>"
+       "<ggplot: (8756782274239)>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
        "Expectations: W, Z"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
        "<Figure size 640x480 with 2 Axes>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
