--- a/docs/source/notebooks/mofatalk.ipynb
+++ b/docs/source/notebooks/mofatalk.ipynb
@@ -62,7 +62,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_bivariate_funs.py:9: NumbaPerformanceWarning: np.dot() is faster on contiguous arrays, called on (array(float32, 1d, C), array(float32, 1d, A))\n",
       "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n"
      ]
     }
@@ -253,22 +252,22 @@
      "output_type": "stream",
      "text": [
       "Now running: ctrl&101:   0%|          | 0/16 [00:00<?, ?it/s]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&107:   6%|▋         | 1/16 [00:05<01:19,  5.30s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1015:  12%|█▎        | 2/16 [00:10<01:16,  5.47s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1016:  19%|█▉        | 3/16 [00:19<01:28,  6.81s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1039:  25%|██▌       | 4/16 [00:25<01:18,  6.55s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1244:  31%|███▏      | 5/16 [00:30<01:04,  5.85s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1256:  38%|███▊      | 6/16 [00:36<01:00,  6.00s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1488:  44%|████▍     | 7/16 [00:44<00:59,  6.65s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&101:  50%|█████     | 8/16 [00:52<00:58,  7.28s/it] /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&107:  56%|█████▋    | 9/16 [00:58<00:47,  6.73s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1015:  62%|██████▎   | 10/16 [01:03<00:36,  6.14s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1016:  69%|██████▉   | 11/16 [01:10<00:32,  6.51s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1039:  75%|███████▌  | 12/16 [01:16<00:25,  6.36s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1244:  81%|████████▏ | 13/16 [01:21<00:17,  5.85s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1256:  88%|████████▊ | 14/16 [01:28<00:12,  6.13s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1488:  94%|█████████▍| 15/16 [01:38<00:07,  7.35s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1488: 100%|██████████| 16/16 [01:47<00:00,  6.69s/it]\n"
+      "Now running: ctrl&107:   6%|▋         | 1/16 [00:05<01:17,  5.18s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1015:  12%|█▎        | 2/16 [00:09<01:06,  4.72s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1016:  19%|█▉        | 3/16 [00:17<01:18,  6.04s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1039:  25%|██▌       | 4/16 [00:23<01:13,  6.12s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1244:  31%|███▏      | 5/16 [00:28<01:04,  5.84s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1256:  38%|███▊      | 6/16 [00:35<01:01,  6.15s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1488:  44%|████▍     | 7/16 [00:42<00:59,  6.58s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&101:  50%|█████     | 8/16 [00:49<00:53,  6.66s/it] /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&107:  56%|█████▋    | 9/16 [00:55<00:45,  6.50s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1015:  62%|██████▎   | 10/16 [01:01<00:36,  6.12s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1016:  69%|██████▉   | 11/16 [01:08<00:32,  6.51s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1039:  75%|███████▌  | 12/16 [01:14<00:25,  6.38s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1244:  81%|████████▏ | 13/16 [01:19<00:17,  5.93s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1256:  88%|████████▊ | 14/16 [01:25<00:11,  5.99s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1488:  94%|█████████▍| 15/16 [01:32<00:06,  6.23s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1488: 100%|██████████| 16/16 [01:40<00:00,  6.26s/it]\n"
      ]
     }
    ],
@@ -525,7 +524,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8744885586929)>"
+       "<ggplot: (8785676057438)>"
       ]
      },
      "execution_count": 10,
@@ -578,14 +577,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 44/44 [00:00<00:00, 208.14it/s]\n"
+      "100%|██████████| 44/44 [00:00<00:00, 247.27it/s]\n"
      ]
     }
    ],
@@ -633,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +722,7 @@
        "    CD8T&DCs:\t13 x 38"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1017,14 +1016,14 @@
        "4   ctrl&107 -0.337035 -0.018800 -0.013755 -0.009356   patient_107      ctrl"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# obtain factor scores\n",
-    "factor_scores = li.multi.get_factor_scores(mdata, obsm_key='X_mofa', obs_keys=['patient', 'condition'])\n",
+    "factor_scores = li.ut.get_factor_scores(mdata, obsm_key='X_mofa', obs_keys=['patient', 'condition'])\n",
     "factor_scores.head()"
    ]
   },
@@ -1038,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1100,10 +1099,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8744879069851)>"
+       "<ggplot: (8785669170047)>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1247,23 +1246,23 @@
        "475  3.743831  0.000605  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "variable_loadings =  li.multi.get_variable_loadings(mdata,\n",
-    "                                                    varm_key='LFs',\n",
-    "                                                    view_separator=':',\n",
-    "                                                    pair_separator=\"&\",\n",
-    "                                                    variable_separator=\"^\") # get loadings for factor 1\n",
+    "variable_loadings =  li.ut.get_variable_loadings(mdata,\n",
+    "                                                 varm_key='LFs',\n",
+    "                                                 view_separator=':',\n",
+    "                                                 pair_separator=\"&\",\n",
+    "                                                 variable_separator=\"^\") # get loadings for factor 1\n",
     "variable_loadings.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1289,10 +1288,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8744879083091)>"
+       "<ggplot: (8785668802542)>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1352,7 @@
        "Expectations: W, Z"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1394,10 +1393,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8744879082782)>"
+       "<ggplot: (8785669147375)>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1449,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1521,7 @@
        "151      NFkB     SELE^CD44  3.332552"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1535,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1768,13 +1767,13 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lr_loadings =  li.multi.get_variable_loadings(mdata,\n",
+    "lr_loadings =  li.ut.get_variable_loadings(mdata,\n",
     "                                              varm_key='LFs',\n",
     "                                              view_separator=':',\n",
     "                                              )\n",
@@ -1788,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1822,10 +1821,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8744876858576)>"
+       "<ggplot: (8785667897630)>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1846,6 +1845,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "  Some of these interactions are not expressed in the data, so we use the `lr_fill` parameter to fill them with 0s.\n",
+    "  This is a rather arbitrary choice, but it is a simple way to deal with missing values. Additionally, since we the views (cell type pairs) are rather sparse, it's possible that the enrichment analysis will not be very informative. Be sure to check the results carefully.\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Outlook & Further Analysis"
    ]
   },
@@ -1854,12 +1864,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial is just a short introduction of the use of MOFA, we thus refer the users to the available [MOFA](https://biofam.github.io/MOFA2/tutorials.html) & [muon tutorials](https://muon-tutorials.readthedocs.io/en/latest/single-cell-rna-atac/index.html) for more applications & details."
+    "This tutorial is just a short introduction of the use of MOFA, we thus refer the users to the available [MOFA](https://biofam.github.io/MOFA2/tutorials.html) & [muon tutorials](https://muon-tutorials.readthedocs.io/en/latest/single-cell-rna-atac/index.html) for more applications & details.\n",
+    "\n",
+    "Similary, consider citing both muon & MOFA+ if you use them in your work!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
