--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -6,7 +6,7 @@
    "id": "2e773f17-4832-47df-8ae0-0d7588ccc889",
    "metadata": {},
    "source": [
-    "# Basic Usage"
+    "# Steady-state Ligand-Receptor inference"
    ]
   },
   {
@@ -1476,7 +1476,7 @@
    "id": "f5b0952d",
    "metadata": {},
    "source": [
-    "### Customizing LIANA's rank aggregate"
+    "## Customizing LIANA's rank aggregate"
    ]
   },
   {
