--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load and Normalize Data"
+    "## Load and Normalize Data"
    ]
   },
   {
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Funcomics"
+    "## Funcomics"
    ]
   },
   {
@@ -582,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Learn Relationships with MISTy"
+    "## Learn Relationships with MISTy"
    ]
   },
   {
@@ -981,7 +981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Linear Misty"
+    "### Linear Misty"
    ]
   },
   {
@@ -1155,7 +1155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Build Custom Misty Views"
+    "## Build Custom Misty Views"
    ]
   },
   {
@@ -1727,7 +1727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ligand-Receptor Misty"
+    "## Ligand-Receptor Misty"
    ]
   },
   {
@@ -1873,7 +1873,7 @@
    "source": [
     "### Citing MISTy:\n",
     "\n",
-    "If you use MISTy via LIAAN+, please cite MISTy's original publication ([Tanevski et al., 2022](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-022-02663-5))"
+    "If you use MISTy via LIANA+, please cite MISTy's original publication ([Tanevski et al., 2022](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-022-02663-5))"
    ]
   },
   {
