--- a/docs/source/notebooks/targeted.ipynb
+++ b/docs/source/notebooks/targeted.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypothesis-testing for CCC across Conditions & Downstream Signalling Networks"
+    "# Hypothesis-testing for CCC & Downstream Signalling Networks"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Differential Testing Results"
+    "## Differential Testing"
    ]
   },
   {
@@ -492,7 +492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DEA to Ligand-Receptor Interactions"
+    "## DEA to Ligand-Receptor Interactions"
    ]
   },
   {
@@ -815,7 +815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize the Results"
+    "## Visualize the Results"
    ]
   },
   {
@@ -935,7 +935,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ligand-Receptor Plot"
+    "### Ligand-Receptor Plot"
    ]
   },
   {
@@ -1011,7 +1011,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Intracellular Signaling Networks\n",
+    "## Intracellular Signaling Networks\n",
     "\n",
     "Cellular signaling networks govern the behavior of cells, allowing them to respond to external signals, including various cell-cell communication events. Thus, CCC events can be thought of as upstream perturbants of intracellular signaling networks that lead to deregulations of downstream signaling events. Such deregulations are expected to be associated with various conditions and disease. Thus, understanding intracellular signaling networks is critical to model the cellular mechanisms.\n",
     "\n",
@@ -1070,7 +1070,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Select Cell types of Interest"
+    "### Select Cell types of Interest"
    ]
   },
   {
@@ -1101,7 +1101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Select Receptors based on interaction stats\n",
+    "### Select Receptors based on interaction stats\n",
     "\n",
     "These will be used as the input or start nodes for the network. In this case, we will use interactions potentially involved in autocrine signalling in CD14 monocytes."
    ]
@@ -1121,7 +1121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Select Transcription Factors of interest\n",
+    "### Select Transcription Factors of interest\n",
     "\n",
     "Before we select the transcription factors, we need to infer their activity. We will do so using [decoupler](https://github.com/saezlab/decoupler-py) with [CollecTri](https://github.com/saezlab/CollecTRI) regulons. Specifically, we will estimate TF activities using the Wald statistics (from PyDESeq2) for the genes in the regulons."
    ]
@@ -1554,7 +1554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Select top x TFs"
+    "### Select top x TFs"
    ]
   },
   {
@@ -1581,7 +1581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Generate a Prior Knowledge Network"
+    "### Generate a Prior Knowledge Network"
    ]
   },
   {
@@ -1724,7 +1724,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Calculate Node weights"
+    "### Calculate Node weights"
    ]
   },
   {
@@ -1760,7 +1760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Find Causal Network"
+    "### Find Causal Network"
    ]
   },
   {
@@ -1964,7 +1964,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualize the Inferred Network"
+    "### Visualize the Inferred Network"
    ]
   },
   {
